fix gap datadokter

--- a/public/admin/data_dokter/datadokter.css
+++ b/public/admin/data_dokter/datadokter.css
@@ -146,6 +146,7 @@ body {
     display: flex;
     justify-content: flex-end;
     margin-bottom: 20px;
+    gap: 20px;
 }
 
 .search-input {
